After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 750528 - --no-desktop wrongly shuts off desktop rendering on an active nautilus instance
--no-desktop wrongly shuts off desktop rendering on an active nautilus instance
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: Desktop
3.14.x
Other Linux
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-06-07 20:08 UTC by Chow Loong Jin
Modified: 2015-08-21 18:11 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch to fix the issue (1.51 KB, patch)
2015-06-07 20:59 UTC, Chow Loong Jin
accepted-commit_now Details | Review

Description Chow Loong Jin 2015-06-07 20:08:32 UTC
Steps to reproduce:
1. Launch nautilus with desktop rendering enabled.
2. With nautilus running, run "nautilus --no-desktop $HOME".

Expected results:
Nautilus window shows up showing $HOME, desktop icons remain as is.

Actual results:
Desktop icons get shut off, eventhough this is not the first invocation of nautilus.


Intended usecase for --no-desktop, as per https://git.gnome.org/browse/nautilus/tree/ChangeLog-20041029?id=ae13dbdfd6acdfe050da9c7cb87ee23fe092ebb1#n23457:

Add a new command-line option "--no-desktop" as requested by
	fcrozat on behalf of people who want to run Nautilus under KDE as
	well as under GNOME. The option has no effect if Nautilus is
	already running, but if it's the first invocation of Nautilus,
	then no desktop-related preferences show up and the desktop is
	not shown regardless of the setting of those preferences.

I suspect that commit 3faea6733bc2f393ddc7f6da43ea4793b675f930 is where it broke.
Comment 1 Chow Loong Jin 2015-06-07 20:59:24 UTC
Created attachment 304735 [details] [review]
Patch to fix the issue
Comment 2 Carlos Soriano 2015-06-08 07:28:04 UTC
Review of attachment 304735 [details] [review]:

Was planning to do the same patch today, because the patch is relatively easy and you took long effort on debug, etc. and that deserves a fix =) . But even nicer to see you did it! Thanks for it.
Looks good to me. Do you have commit access?
Comment 3 Chow Loong Jin 2015-06-09 03:49:01 UTC
Heh, actually I was thinking of just reverting it and giving it a spin, but ran into a bunch of merge conflicts and figured it would be easier to just spin this patch up.
Comment 4 Chow Loong Jin 2015-06-09 03:49:26 UTC
And no I don't have commit access.
Comment 5 Carlos Soriano 2015-06-09 09:33:43 UTC
Ok. pushed to master, thanks for the work!
Comment 6 Carlos Soriano 2015-08-21 18:11:02 UTC
*** Bug 738673 has been marked as a duplicate of this bug. ***