application: Ignore --no-desktop if not first launch

--no-desktop is an option to allow for running Nautilus under other desktop
environments as well as GNOME without clobbering the foreign desktop
environment's desktop.

https://bugzilla.gnome.org/show_bug.cgi?id=750528

Signed-off-by: Chow Loong Jin <hyperair@debian.org>